fix mobile view

--- a/src/components/Home/home.sass
+++ b/src/components/Home/home.sass
@@ -18,10 +18,12 @@ $light-blue: #02c39a
     width: 30px
 
   .technologies-wrapper
+    height: 100vh
+
     .technologies
       background: linear-gradient(to left, $blue, $light-blue)
       display: flex
-      height: 350px
+      height: 50vh
 
       @media screen and (max-width: 1024px)
         height: unset
@@ -51,8 +53,9 @@ $light-blue: #02c39a
   .title
     color: $title
     margin: 0
-    padding: 30px
+    padding: 40px
     text-align: center
+    height: 50vh
 
 @keyframes blink
   50%
